# ferrisfeed

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.web  README.en.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: README.md  release.yml
.trellis/spec/backend/: error-handling.md
.trellis/spec/frontend/: state-management.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/app/: reader_app.dart  reader_controller.dart  reader_repository.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: reader.dart
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
nginx/: web.conf
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  reader.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_rss_reader.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_rss_reader.podspec
rust_builder/windows/: CMakeLists.txt
test/: reader_app_test.dart  reader_import_test.dart
tools/: build-android  build-linux-appimage  build-linux-bundle  build-web-image  flutter  rebuild-web  run-web-image
web/: index.html
windows/flutter/: generated_plugins.cmake
