[package]
name = "rust_lib_rss_reader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { git = "https://github.com/fzyzcjy/flutter_rust_bridge", rev = "254b193" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
